cmake_minimum_required(VERSION 3.20)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm
#        BaekJoon/Array/boj_10818.cpp
#        BaekJoon/Array/boj_1546.cpp
#        BaekJoon/Array/boj_2562.cpp
#        BaekJoon/Array/boj_2577.cpp
#        BaekJoon/Array/boj_3052.cpp
#        BaekJoon/Array/boj_4344.cpp
#        BaekJoon/Array/boj_8958.cpp
#        BaekJoon/BackTracking/boj_15649.cpp
#        BaekJoon/Basic_math/boj_1011.cpp
#        BaekJoon/Basic_math/boj_10250.cpp
#        BaekJoon/Basic_math/boj_10757.cpp
#        BaekJoon/Basic_math/boj_1193.cpp
#        BaekJoon/Basic_math/boj_1712.cpp
#        BaekJoon/Basic_math/boj_2292.cpp
#        BaekJoon/Basic_math/boj_2775.cpp
#        BaekJoon/Basic_math/boj_2839.cpp
#        BaekJoon/Basic_math/boj_2869.cpp
#        BaekJoon/Basic_math_2/boj_1002.cpp
#        BaekJoon/Basic_math_2/boj_1085.cpp
#        BaekJoon/Basic_math_2/boj_11653.cpp
#        BaekJoon/Basic_math_2/boj_1929.cpp
#        BaekJoon/Basic_math_2/boj_1978.cpp
#        BaekJoon/Basic_math_2/boj_2581.cpp
#        BaekJoon/Basic_math_2/boj_3009.cpp
#        BaekJoon/Basic_math_2/boj_3053.cpp
#        BaekJoon/Basic_math_2/boj_4153.cpp
#        BaekJoon/Basic_math_2/boj_4948.cpp
#        BaekJoon/Basic_math_2/boj_9020.cpp
#        BaekJoon/Brute_Force/boj_1018.cpp
#        BaekJoon/Brute_Force/boj_1436.cpp
#        BaekJoon/Brute_Force/boj_2231.cpp
#        BaekJoon/Brute_Force/boj_2798.cpp
#        BaekJoon/Brute_Force/boj_7568.cpp
#        BaekJoon/DFS_BFS/boj_1260.cpp
#        BaekJoon/DFS_BFS/boj_2606.cpp
#        BaekJoon/DFS_BFS/boj_2667.cpp
#        BaekJoon/Function/boj_1065.cpp
#        BaekJoon/Function/boj_15596.cpp
#        BaekJoon/Function/boj_4673.cpp
#        BaekJoon/Greedy/boj_10161.cpp
#        BaekJoon/Greedy/boj_11047.cpp
#        BaekJoon/Greedy/boj_1931.cpp
#        BaekJoon/Greedy/boj_5585.cpp
#        BaekJoon/Recursion/boj_10870.cpp
#        BaekJoon/Recursion/boj_10872.cpp
#        BaekJoon/Recursion/boj_11729.cpp
#        BaekJoon/Recursion/boj_2447.cpp
#        BaekJoon/Sorting/boj_2750.cpp
#        BaekJoon/Sorting/boj_2751.cpp
#        BaekJoon/Strings/boj_10809.cpp
#        BaekJoon/Strings/boj_1152.cpp
#        BaekJoon/Strings/boj_1157.cpp
#        BaekJoon/Strings/boj_11654.cpp
#        BaekJoon/Strings/boj_11720.cpp
#        BaekJoon/Strings/boj_1316.cpp
#        BaekJoon/Strings/boj_2675.cpp
#        BaekJoon/Strings/boj_2908.cpp
#        BaekJoon/Strings/boj_2941.cpp
#       BaekJoon/Strings/boj_5622.cpp
#        E-PPER/10_02.cpp
#        E-PPER/13_09.cpp
#        E-PPER/14_07.cpp
        E-PPER/15_04.cpp
#        E-PPER/15_05.cpp
#        E-PPER/16_01.cpp
#        E-PPER/16_02.cpp
#        E-PPER/16_03.cpp
#        E-PPER/16_04.cpp
#        E-PPER/16_05.cpp
#        E-PPER/boj_1259.cpp
#        E-PPER/boj_13305.cpp
#        E-PPER/boj_13458.cpp
#        E-PPER/prog_43238.cpp
#        Programmers/DFS_BFS/network.cpp
#        Programmers/DFS_BFS/target_Number.cpp
#        Programmers/Greedy/test_01.cpp
        )
